# kicad-source-mirror

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  copilot_global.cpp  get_kicad_version_info.cpp  vcpkg-configuration.json  vcpkg.json
.gitlab/: Fedora-Linux-CI.yml
bitmaps_png/: CMakeLists.txt
cmake/: copilot_config.h.cmake
common/: CMakeLists.txt  advanced_config.cpp  bitmap_info.cpp  build_version.cpp  debug_report.cpp  design_block_lib_table.cpp  design_block_library_adapter.cpp  design_block_tree_model_adapter.cpp  dialog_shim.cpp  drc_rules.keywords  eda_base_frame.cpp  eda_draw_frame.cpp  eda_item.cpp  fp_lib_table.cpp  grid_tricks.cpp  layer_id.cpp  lset.cpp  (+12 more)
copilot/: CMakeLists.txt  README.md  copilot.cpp  copilot.h  copilot_global.h
copilot/assistant/: CMakeLists.txt  assistant.h  assistant_global.h  assistant_launcher.cpp  assistant_launcher.h  assistant_view.h  copilot.rc  copilot_version.cpp
copilot/assistant/chat/: chat_cmd.cpp  chat_cmd.h  chat_cmd_queue.h  chat_context.cpp  chat_context.h  chat_history.cpp  chat_history.h  chat_panel.cpp  chat_panel.h  chat_panel_base.cpp  chat_panel_base.fbp  chat_panel_base.h
copilot/assistant/client/: chat_cmd_queue.h  websocket_client.cpp  websocket_client.h  websocket_endpoint.cpp  websocket_endpoint.h  websocket_payload.h  websocket_uri.h  websocket_worker.cpp  websocket_worker.h
copilot/assistant/common/: assistant_version.cpp  assistant_version.h  dialog_image_viewer.cpp  dialog_image_viewer.h
copilot/assistant/cv/: CMakeLists.txt  cameraapp.cpp  cameragridframe.cpp  cameragridframe.h  camerapanel.cpp  camerapanel.h  camerathread.cpp  camerathread.h  onecameraframe.cpp  onecameraframe.h
copilot/assistant/data_buried_point/: data_buried_point.h  fire_data_buried_point.cpp  fire_data_buried_point.h
copilot/assistant/http/: http_client.cpp  http_client.h  http_utils.h
copilot/assistant/proto/: data_buried_point.h
copilot/assistant/settings/: config_io_helper.h  copilot_config_version.h  copilot_settings.h  copilot_settings_manager.cpp  copilot_settings_manager.h
copilot/assistant/utils/: http_utils.h
copilot/assistant/websocket/: websocket_endpoint.cpp  websocket_endpoint.h  websocket_event.cpp  websocket_event.h  websocket_worker.cpp  websocket_worker.h
copilot/assistant/webview/: web_utils.h  webview_constant.h  webview_container.cpp  webview_container.h
copilot/assistant/webview/internal/: web_host.h
copilot/data_buried_point/: data_buried_point.h
copilot/interface/: README.md  assistant_interface.h  copilot_aui_info.h  copilot_context.h  copilot_global.h  copilot_global_ctx_hdl.h  copilot_panel_name.h  dylib.hpp  host_copilot_handles.h  host_type.h  host_version_info.h  kicad_copilot_editors.h  kicad_version_info.h  optional_context.h
copilot/interface/active_action/: active_action_category.h
copilot/interface/active_action/cmd/: copilot_cmd_base.h  copilot_cmd_type.h
copilot/interface/active_action/cmd/common/: selection_change_cmd.h
copilot/interface/active_action/cmd/pcb/: pcb_copilot_cmd_type.h
copilot/interface/active_action/cmd/sch/: sch_copilot_cmd_type.h
copilot/interface/agent/: agent_action.h  agent_action_context.h  agent_action_type.h
copilot/interface/chat/: general_chat_cmd.h
copilot/interface/cmd/: cmd_base.h  copilot_cmd.h  copilot_cmd_base.h  copilot_cmd_type.h  generic_chat_cmd.h  session_cmd.h  session_cmd_type.h
copilot/interface/context/: consumable_context.h  context_fields.h  copilot_context.h  copilot_global_context.h  copilot_global_context_handle.h  copilot_global_ctx_hdl.h  design_global_context.h  design_global_context_handle.h  optional_context.h  symbol_context.h  variable_context.h
copilot/interface/context/common/: designators_context.h
copilot/interface/context/generic_chat/: builtin_reference.h  generic_chat_context.h  generic_chat_options.h
copilot/interface/context/pcb/: footprint_context.h  optional_sch_netlist.h  pcb_copilot_global_context.h
copilot/interface/context/pcb/details/: board_ir.h  board_json_schema.h
copilot/interface/context/pcb/fab/: pcb_fab_distance_settings.h  pcb_fab_settings_context.h
copilot/interface/context/sch/: sch_copilot_global_context.h
copilot/interface/context/sch/details/: netlist_json_schema.h  sch_bom.h  sch_netlist.h  sch_netlist_context.h  sch_selection_context.h  sch_sheets_context.h  sch_xml_netlist_context.h  symbol_pin.h  symbol_properties.h
copilot/interface/passive_action/: passive_action_category.h  passive_action_container.h  passive_cmd.h
copilot/interface/passive_action/agent/: agent_action.h  agent_action_base.h  agent_action_context.h  agent_action_handle.h  agent_action_type.h
copilot/interface/passive_action/agent/context/: component_agent_action_context.h  highlight_symbol_context.h  launch_pcb_plugin_context.h  optional_param_context.h
copilot/interface/passive_action/web/: web_host.h
copilot/interface/sch/: bom.h  symbol_pin.h
copilot/interface/settings/: assistant_interface_path.h  assistant_interface_setting_mgr.h  assistant_interface_version.h
copilot/interface/utils/: copilot_utils.h  httplib.h
copilot/interface/webview/: webview_container.h
copilot/standalone/: CMakeLists.txt  main.cpp  standalone.h
copilot/updater/: CMakeLists.txt  assistant_updater.cpp  assistant_updater.h
(+613 files in other folders)
